00-pihole-namespace.yaml
########################################################
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  namespace: pihole
  labels:
    app.kubernetes.io/instance: pihole
