pihole-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
    app.kubernetes.io/instance: pihole
spec:
  serviceName: pihole
  selector:
    matchLabels:
      service-web: pihole-web
      service-dns: pihole-dns
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      namespace: pihole
      labels:
        service-web: pihole-web
        service-dns: pihole-dns
    spec:
      containers:
        - name: unbound
          image: mvance/unbound-rpi:1.13.1
          livenessProbe:
            exec:
              command:
              - drill @127.0.0.1 cloudflare.com || exit 1
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - drill @127.0.0.1 cloudflare.com || exit 1
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: unbound-conf
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
          resources:
            limits:
              memory: "128Mi"
              cpu: 500m
            requests:
              memory: "64Mi"
              cpu: 200m
        - name: pihole
          image: pihole/pihole:2022.04.3
          livenessProbe:
            exec:
              command:
              - dig +short +norecurse +retry=0 @127.0.0.1 pi.hole || exit 1
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - dig +short +norecurse +retry=0 @127.0.0.1 pi.hole || exit 1
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 53
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: 500m
            requests:
              memory: "64Mi"
              cpu: 200m
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /etc/pihole
              name: etc-pihole-vct
            - mountPath: /etc/dnsmasq.d
              name: etc-dnsmasqd-vct
            - name: custom-dns
              mountPath: /etc/dnsmasq.d/69-custom-dns.conf
              subPath: 69-custom-dns.conf

      restartPolicy: Always
      volumes:
        - name: unbound-conf
          configMap:
            name: unbound-conf
        - name: custom-dns
          configMap:
            name: custom-dns

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - web
                topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: etc-pihole-vct
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: pihole-nfs-client
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: etc-dnsmasqd-vct
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: pihole-nfs-client
      resources:
        requests:
          storage: 1Gi
