pihole-service-web.yaml
########################################################
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: pihole
    service-web: pihole-web
  name: pihole-web
  namespace: pihole
spec:
  ports:
    - name: "web"
      port: 80
      targetPort: 80
  selector:
    service-web: pihole-web
status:
  loadBalancer: {}
