pihole-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app.kubernetes.io/instance: pihole
spec:
  rules:
  - host: dns.de.araujo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
